--- a/leaflet-challenge/leaflet-Step-1/index.html
+++ b/leaflet-challenge/leaflet-Step-1/index.html
@@ -4,10 +4,10 @@
   <!--<meta name="viewport" content="width=device-width, initial-scale=1">-->
   <meta charset="utf-8">
   <title></title>
-  <!-- Leaflet CSS & JS  -->
+  <!-- Leaflet CSS  -->
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.1/dist/leaflet.css" />
   <script src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js"></script>
-  <!-- D3 cdn -->
+  <!-- D3 -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/4.5.0/d3.min.js"></script>
   <!-- CSS  -->
   <link rel="stylesheet" type="text/css" href="css/style.css">
